--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -1,6 +1,7 @@
 com_Header As CanvasComponent:
     Fill: =RGBA(0, 0, 0, 0)
     Height: =75
+    IsInventura: =true
     OnLogoClickScreen: =App.ActiveScreen
     Title: ="Text"
     Width: =App.Width
