--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -3,8 +3,10 @@ com_Modal As CanvasComponent:
     Fill: =RGBA(0, 0, 0, 0)
     Height: =App.Height
     IsInventura: =true
+    LineId: ="Text"
     QuantityCompleted: =0
     QuantityNewLOT: =0
+    ResEntryId: ="Text"
     Width: =App.Width
     X: =0
     Y: =0
@@ -175,7 +177,7 @@ com_Modal As CanvasComponent:
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
                             Type: ="Text"
-                            Value: =Abs(com_Modal.QuantityCompleted)
+                            Value: =Abs(QuantityCompleted)
                             Visible: =true
                             Width: =200
                             X: =40
@@ -342,10 +344,14 @@ com_Modal As CanvasComponent:
                         Layout: ='ButtonCanvas.Layout'.IconAfter
                         LayoutMinHeight: =32
                         LayoutMinWidth: =96
-                        OnSelect: |-
-                            =Reset(inp_rezQty_2);
+                        OnSelect: |
+                            =Patch(colLines, LookUp(colLines, 'Line_No.' = com_Modal.LineId), {Qty_Phys_Inventory: QuantityCompleted});
+                            Reset(inp_rezQty_2);
                             Reset(inp_potrebnoQty_2);
-                            Set(isModalOpen, false);
+                            Set(
+                                isModalOpen,
+                                false
+                            );
                         Text: ="Spasi"
                         Width: =96
                         X: =0
