--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -554,7 +554,7 @@
                 LayoutMinHeight: =287
                 LayoutMinWidth: =320
                 LoadingSpinner: =LoadingSpinner.Data
-                OnSelect: =If(!First(Filter(lockedItems, documentId = SelectedDocumentName, lineId = glr_Inv.Selected.'Line_No.')).isLocked, com_InvModal.IsModalOpen = true)
+                OnSelect: =If(!First(Filter(lockedItems, documentId = SelectedDocumentName, lineId = glr_Inv.Selected.'Line_No.')).isLocked, Set(isModalOpen, true))
                 TemplatePadding: =0
                 TemplateSize: =291
                 Visible: =!isLoading
@@ -1023,7 +1023,7 @@
                 ZIndex: =4
 
     com_InvModal As com_Modal:
-        QuantityCompleted: =glr_Inv.Selected.Quantity
-        Visible: =true
+        QuantityCompleted: =glr_Inv.Selected.Qty_Phys_Inventory
+        Visible: =isModalOpen
         ZIndex: =3
 
