--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -107,8 +107,11 @@
 
         com_EntryHeader As com_Header:
             BackToScreen: =
-            ChildTabPriority: =App.Width
-            LayoutMinHeight: =640
+            ChildTabPriority: =
+            FillPortions: =1
+            Height: =75
+            IsMobile: =isMobile
+            LayoutMinHeight: =75
             LayoutMinWidth: =200
             Title: ="BADECO SLJEDIVOST I NAPREDNO SKLADIŠTE"
 
