--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -412,8 +412,10 @@
 
         com_InvHeader As com_Header:
             BackToScreen: =scr_Entry
+            IsInventura: =false
+            IsMobile: =isMobile
             LayoutMinHeight: =640
-            LayoutMinWidth: =640
+            LayoutMinWidth: =250
             Title: ="TEMELJNICE INVENTURE"
 
         con_InvBody As groupContainer.verticalAutoLayoutContainer:
@@ -450,6 +452,7 @@
                 RadiusBottomRight: =4
                 RadiusTopLeft: =4
                 RadiusTopRight: =4
+                Visible: =false
                 Width: =Parent.Width
                 ZIndex: =1
 
