--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -109,6 +109,7 @@
             BackToScreen: =
             ChildTabPriority: =
             Height: =75
+            IsEntryScreen: =true
             IsMobile: =isMobile
             LayoutMinHeight: =75
             LayoutMinWidth: =200
